# limsn

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README.md  README.org  artanis51.scm  artanis52.scm  clean.sh  configure.ac  guix.scm  hall.scm  limsn.scm  limsnlyt-4681908014047229919495.txt  limsnlyt-4956482081723254900063.txt  limsnlyt-8222479441190188284525.txt  manifest.scm  sha-256
build-aux/: test-driver.scm
doc/: overview.org  syscrat.org
labsolns/: gplot.scm  gplot.scm~
limsn/: #artanis-test.scm#  .#artanis-test.scm  .route  ENTRY  README  artanis-test.scm  guix.scm  hall.scm  manifest.scm  run-clean.sh  run.sh  run.sh~  run100.sh  run100.sh~  sha-256  tmplyt-1562457325090311990834.txt  tmplyt-4681908014047229919495.txt  tmplyt-4956482081723254900063.txt  tmplyt-7764507602467792171973.txt  tmplyt-8222479441190188284525.txt  tmplyt-8979463676968975582509.txt
limsn/app/api/: v1.scm
limsn/app/controllers/: assayrun.scm  hitlist.scm  layout.scm  login.scm  loginold.scm  plate.scm  plateset.scm  project.scm  sessions.scm  target.scm  test.scm  urbit.scm  urbit.scm~  users.scm  utilities.scm  utilities.scm~
limsn/app/views/assayrun/: getalldata.bak  getalldata.html.tpl  getarid.html.bak  getarid.html.tpl  getforpsid.html.tpl  replot.html.tpl  test.html.tpl
limsn/app/views/hitlist/: addtoar.html.tpl  forprj.html.tpl  gethlbyid.html.tpl  gethlbyid.html.tpl~  gethlforarid.html.tpl  importhl.html.tpl  rearray.html.tpl  rearray.html.tpl~  rearraystep2.html.tpl  rearraystep2.html.tpl~  test.html.tpl  test2.html.tpl  viewhits.html.tpl
limsn/app/views/layout/: getall.html.tpl  import.html.tpl  lytbyid.html.tpl  lytbyid.html.tpl~  select.html.tpl  success.html.tpl  test.html.tpl  upload.html.tpl  viewlayout.html.tpl
limsn/app/views/login/: test.html.tpl
limsn/app/views/plate/: getpltforps.html.tpl  getwellsforplt.html.tpl  getwellsforplt.html.tpl~  getwellsforpplt.html.tpl~  getwellsforps.html.tpl  groupplts.html.tpl  test.html.tpl
limsn/app/views/plateset/: add.html.tpl  addstep2.html.tpl  addstep2.html.tpl~  editps.html.tpl  getps.html.tpl  getps.html.tpl~  grouperror.html.tpl  groupps.html.tpl  impaccs.html.tpl  impbc.html.tpl  impdata.html.tpl  impdataaction.html.tpl  impdataaction.html.tpl~  reformatconfirm.html.tpl  reformatconfirm.html.tpl~  reformatps.html.tpl  reformatps.html.tpl~  test.html.tpl  test2.html.tpl  testcset.html.tpl  worklist.html.tpl
limsn/app/views/project/: add.html.tpl  add.html.tpl~  edit.html.tpl  getall.html.tpl  notadmin.html.tpl  poster.html.tpl  test.html.tpl  test.html.tpl~  unlicensed.html.tpl
limsn/app/views/test/: add.html.tpl  authtest.html.tpl  authtest.html.tpl~  check.html.tpl  cookietest.html.tpl  logtest.html.tpl  logtest.html.tpl~  page1.html.tpl  page2.html.tpl  remove.html.tpl  sessiontest.html.tpl  test.html.tpl
limsn/app/views/users/: add.html.tpl  add.html.tpl~  entry.html.tpl  get.html.tpl  getall.html.tpl  getall.html.tpl~  notadmin.html.tpl  test.html.tpl  unlicensed.html.tpl
limsn/app/views/utilities/: failreg.html.tpl  isreg.html.tpl  isreg.html.tpl~  login.html.tpl  login.html.tpl~  menu.html.tpl  notadmin.html.tpl  regform.html.tpl  register.html.tpl  test.html.tpl  test.html.tpl~
limsn/conf/: artanis.conf  plugins.scm
limsn/doc/: lnserver.texi
limsn/lib/: #gplot.scm#  artass.scm  lnpg.scm  run-lnpg.scm
limsn/lib/labsolns/: artass.scm  gplot.scm  lnpg.scm
limsn/patches/: config.scm
limsn/postgres/: create-db.sql  drop-func-tables.sql  example-data.sql  initdb.sql  initdba.sql  initdbb.sql  initdbc.sql  install-pg.sh  lnpg.tar.xz  pg_hba.conf  postgresql.conf
limsn/pub/: .gitignore  header.tpl
limsn/rscripts/: plot-assayrun (copy).R  plot-assayrun.R  plot-assayrun.R~  plot-layout.R~  plot-review-layout.R  plot-review-layout.R~  well_numbers_for_import.txt
limsn/sys/pages/: 400.html  401.html  403.html  404.html  405.html  408.html  419.html  426.html  500.html  502.html  503.html  504.html
limsn/tmp/: .route  hl-4956482.txt  script-2144413955821242018230.txt  script-2934925227220687847255.txt  script-4924281834433450611402.txt  script-4956482081723254900063.txt  script-7188681388627169669234.txt
limsn/tmp/cache/: route.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/assayrun/: getarid.html.tpl.cache  replot.html.tpl.cache  test.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/layout/: getall.html.tpl.cache  lytbyid.html.tpl.cache  select.html.tpl.cache  test.html.tpl.cache  viewlayout.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/login/: login.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/plate/: getpltforps.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/plateset/: getps.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/project/: getall.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/sessions/: getall.html.tpl.cache  notadmin.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/users/: add.html.tpl.cache  getall.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/limsn/limsn/app/views/utilities/: failreg.html.tpl.cache  menu.html.tpl.cache  notadmin.html.tpl.cache  register.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/ln4/lnserver/app/views/assayrun/: getarid.html.tpl.cache  getid.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/ln4/lnserver/app/views/hitlist/: gethlbyid.html.tpl.cache  gethlforarid.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/ln4/lnserver/app/views/layout/: getall.html.tpl.cache  lytbyid.html.tpl.cache
limsn/tmp/cache/tpl/home/mbc/projects/ln7/lnserver/sys/pages/: warn-the-client.tpl.cache
scripts/: guix-install-mod.sh  init-limsn-channel.sh  init-limsn-pack.sh  init-limsn.sh  init-ln.sh  install-limsn-w-channel.sh  install-limsn.sh  install-lnpg.sh  install-pg-aws-ec2.sh  install-pg-aws-rds.sh  install-pg-aws.sh  install-postgres.sh  lnpg.sh  lnpgrecipe.scm  load-pg.sh  start-limsn.sh
(+78 files in other folders)
