include guile.am

SOURCES =               \
  limsn/app/controllers/*.scm    \
limsn/lib/labsolns/*.scm  \
limsn/app/api/v1.scm	
  

EXTRA_DIST =                    \
  bootstrap                     \
  pre-inst-env.in               \
  limsn/app/views/*/*.html.tpl  \
  limsn/conf/artanis.conf       \
  limsn/postgres/*.sql          \
  limsn/pub/*/*.*               \
  limsn/pub/*/*/*.*               \
  limsn/pub/*.tpl
